# RadarUpperComputer

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DESIGN.MD
.claude/agents/: README.md  SMART_COORDINATOR_GUIDE.md  algorithm.md  architect.md  backend.md  code-reviewer.md  coordinator.md  docs.md  frontend-client.md  frontend-radar.md  integration.md  protocol.md  release.md  report-writer.md  reporter.md  requirements.md  security.md  simulation.md  smart-coordinator.md  testing.md
.claude/workflows/: auto-workflow-runner.md  example-spectrum-page.md  full-development-workflow.md  quick-reference.md
docs/: COMM_PROTOCOL.md  DATA_FORMAT.md  DATA_INTERFACE.md  DEPLOYMENT_AND_NETWORK.md  PYART_INTEGRATION.md  TECHNICAL_DOC_INDEX.md  ZYNQ7015_RADAR_DATA_AND_COMMUNICATION_SPEC.md  ZYNQ_UPPER_COMPUTER_DATA_INTERFACE_GUIDE.md
pyart-service/: .gitignore  README.md  pyproject.toml  requirements.txt
pyart-service/examples/: generate_synthetic_request.py
pyart-service/schemas/: wind-profile-result.schema.json  wind-retrieval-request.schema.json
pyart-service/src/radar_pyart_service/: __init__.py  errors.py  products.py  radar_adapter.py  retrieval.py  validation.py  worker.py
pyart-service/tests/: test_retrieval.py
reports/: 2026-07-09-architecture-refactor.md  2026-07-09-bug-fix-2.md  2026-07-09-bug-fix-3.md  2026-07-09-bug-fix.md  2026-07-09-code-review.md  2026-07-09-dashboard-page.md  2026-07-09-desktop-development.md  README.md  REPORT_WORKFLOW.md
simulation/: tcp_server_fixed.c  test_protocol.py  test_server.py
simulation/code_files/: db_interface.c  db_interface.h  tcp_server.c  tcp_server.h  接入说明.md
src/: main.cpp
src/client/: CMakeLists.txt  main.cpp
src/client/app/: ClientApp.cpp  ClientApp.h
src/client/ui/: MainWindow.cpp  MainWindow.h
src/client/ui/navigation/: NavigationBar.cpp  NavigationBar.h
src/client/ui/pages/: BeamPage.cpp  BeamPage.h  DashboardPage.cpp  DashboardPage.h  DataQualityPage.cpp  DataQualityPage.h  DeviceHealthPage.cpp  DeviceHealthPage.h  DeviceStatusPage.cpp  DeviceStatusPage.h  SettingsPage.cpp  SettingsPage.h  SpectrumPage.cpp  SpectrumPage.h  WindFieldPage.cpp  WindFieldPage.h
src/client/ui/widgets/: AlarmList.cpp  AlarmList.h  BeamHealthGrid.cpp  BeamHealthGrid.h  MetricCard.cpp  MetricCard.h  RangeGateTable.cpp  RangeGateTable.h  WindRoseWidget.cpp  WindRoseWidget.h  WindTrendChart.cpp  WindTrendChart.h  WindVectorFieldWidget.cpp  WindVectorFieldWidget.h
src/communication/: frame.h  networkmanager.cpp  networkmanager.h  protocolparser.cpp  protocolparser.h
src/core/: CMakeLists.txt
src/core/algorithms/: FiveBeamWindRetrieval.cpp  FiveBeamWindRetrieval.h  PyArtWindService.cpp  PyArtWindService.h
src/core/communication/: FrameParser.cpp  FrameParser.h  FrameTypes.h  TcpDataSource.cpp  TcpDataSource.h  WebSocketManager.cpp  WebSocketManager.h
src/core/domain/: AlarmEvent.cpp  AlarmEvent.h  BeamState.cpp  BeamState.h  DeviceHealth.cpp  DeviceHealth.h  RadarDevice.cpp  RadarDevice.h  RadarTypes.h  RangeGate.cpp  RangeGate.h  WindProfile.cpp  WindProfile.h
src/core/services/: AlarmService.cpp  AlarmService.h  DataService.cpp  DataService.h  DeviceService.cpp  DeviceService.h
tests/: CMakeLists.txt  DataServiceHistoryTest.cpp  DeviceServiceIntegrationTest.cpp  FiveBeamWindRetrievalTest.cpp  PpiRenderTest.cpp
